<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.EditUserPage">

    <TextView
        android:id="@+id/editBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="TextView"
        android:textSize="@dimen/banners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changePword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/confirmPword"
        tools:layout_editor_absoluteY="324dp" />

    <Button
        android:id="@+id/edit_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="493dp" />

    <EditText
        android:id="@+id/change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/change_dob"
        tools:layout_editor_absoluteY="166dp" />

    <EditText
        android:id="@+id/change_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/landPage_DateOfBirth"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/changePword"
        tools:layout_editor_absoluteY="248dp" />

    <EditText
        android:id="@+id/confirmPword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_confirm_password"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="393dp" />

</androidx.constraintlayout.widget.ConstraintLayout>