<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9DDF4"
    tools:context=".Debt_Repayment.Debt_Repayment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="84dp"
        android:text="@string/invest_banner"
        android:textSize="@dimen/banners"
        app:layout_constraintEnd_toEndOf="@+id/debt_repay_tellMinRepay"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/debt_repay_debts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/debt_repay_extra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debt_repay_interest" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:text="@string/invest_selfWhy"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/debt_repay_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="33dp"
        android:text="@string/invest_byInterest"
        app:layout_constraintEnd_toEndOf="@+id/debt_repay_debts"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invest_sortBy"
        android:textSize="@dimen/h4"
        app:layout_constraintBottom_toTopOf="@+id/debt_repay_interest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/debt_repay_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="11dp"
        android:text="@string/invest_bySize"
        app:layout_constraintBottom_toTopOf="@+id/debt_repay_debts"
        app:layout_constraintStart_toStartOf="@+id/debt_repay_debts" />

    <TextView
        android:id="@+id/debt_repay_lifeTimeSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/invest_moneyIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/debt_repay_extra"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="186dp"
        android:ems="10"
        android:hint="@string/invest_repayOver"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/debt_repay_tellMinRepay"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/debt_repay_schedule"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/debt_repay_extra" />

    <TextView
        android:id="@+id/debt_repay_tellMinRepay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="54dp"
        android:text="@string/invest_repayMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/debt_repay_extra"
        app:layout_constraintTop_toBottomOf="@+id/debt_repay_debts" />

</androidx.constraintlayout.widget.ConstraintLayout>